--- a/DroidPlanner/res/layout/fragment_hud_map.xml
+++ b/DroidPlanner/res/layout/fragment_hud_map.xml
@@ -16,17 +16,20 @@
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:visibility="invisible"
         android:layout_alignRight="@id/strutCenter" >
     </FrameLayout>
 
     <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
+        android:visibility="invisible"
         android:layout_alignLeft="@+id/strutCenter" >
 
         <FrameLayout
             android:id="@+id/containerMap"
             android:layout_width="match_parent"
+            android:visibility="invisible"
             android:layout_height="match_parent" >
         </FrameLayout>
 
@@ -39,6 +42,7 @@
             android:fadeEnabled="false"
             android:gestureColor="@android:color/white"
             android:gestureStrokeLengthThreshold="0.1"
+            android:visibility="invisible"
             android:gestureStrokeType="single" >
         </android.gesture.GestureOverlayView>
     </FrameLayout>
