--- a/DroidPlanner/res/layout/fragment_mission_control.xml
+++ b/DroidPlanner/res/layout/fragment_mission_control.xml
@@ -4,7 +4,7 @@
     android:id="@+id/contentLayoutMissionControl"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
+    android:layout_gravity="center"
     android:orientation="horizontal" >
 
 	<Button
@@ -26,6 +26,7 @@
 	    android:background="@drawable/button_macro"
 	    android:drawableTop="@drawable/ic_edit"
         android:layout_weight="1"
+        android:visibility="invisible"
 	    android:text="Edit" />
 
 
@@ -37,6 +38,7 @@
 	    android:background="@drawable/button_macro"
 	    android:drawableTop="@drawable/ic_home"
         android:layout_weight="1"
+        android:visibility="invisible"
 	    android:text="Home" />
 
 
@@ -49,6 +51,17 @@
 	    android:drawableTop="@drawable/ic_land"
 	    android:text="Land"
         android:layout_weight="1"
+        android:visibility="invisible"
+	    tools:ignore="ContentDescription" />
+
+	<Button
+	    android:id="@+id/mc_follow"
+	    style="@style/flightControlButton"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:background="@drawable/button_macro"
+	    android:drawableTop="@drawable/ic_follow"
+	    android:text="Catch Me!"
 	    tools:ignore="ContentDescription" />
 
 	<Button
@@ -59,7 +72,7 @@
 	    android:background="@drawable/button_macro"
 	    android:drawableTop="@drawable/ic_takeoff"
 	    android:text="Takeoff"
-		android:visibility="gone"
+		android:visibility="invisible"
         android:layout_weight="1"
 	    tools:ignore="ContentDescription" />
 
@@ -72,17 +85,7 @@
 	    android:drawableTop="@drawable/ic_loiter"
 	    android:text="Loiter"
         android:layout_weight="1"
-	    tools:ignore="ContentDescription" />
-
-	<Button
-	    android:id="@+id/mc_follow"
-	    style="@style/flightControlButton"
-	    android:layout_width="75dp"
-	    android:layout_height="match_parent"
-	    android:background="@drawable/button_macro"
-	    android:drawableTop="@drawable/ic_follow"
-	    android:text="Follow"
-        android:layout_weight="1"
+        android:visibility="invisible"
 	    tools:ignore="ContentDescription" />
 
 </LinearLayout>
