--- a/DroidPlanner/res/layout/fragment_telemetry.xml
+++ b/DroidPlanner/res/layout/fragment_telemetry.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/transparentLayout"
     android:layout_width="wrap_content"
+    android:visibility="invisible"
     android:layout_height="wrap_content">
 
     <RelativeLayout
@@ -12,6 +13,7 @@
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:paddingBottom="5dp"
+        android:visibility="invisible" 
         android:paddingTop="5dp">
 
         <TextView
