--- a/ChaseMe/res/layout/fragment_mission_control.xml
+++ b/ChaseMe/res/layout/fragment_mission_control.xml
@@ -55,7 +55,7 @@
 	    tools:ignore="ContentDescription" />
 
 	<Button
-	    android:id="@+id/mc_follow"
+	    android:id="@+id/mc_chaseme"
 	    style="@style/flightControlButton"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
